[gd_scene load_steps=9 format=3 uid="uid://dk27voyyio8yv"]

[ext_resource type="Texture2D" uid="uid://coonwtsiwha8y" path="res://assets/player/parrot.png" id="1_oryip"]
[ext_resource type="Script" uid="uid://dxupsphgps6m8" path="res://Scenes/Animal/Animal.gd" id="1_x85cc"]
[ext_resource type="Texture2D" uid="uid://d1lqlasbpe4nm" path="res://assets/items/arrow.png" id="2_x85cc"]
[ext_resource type="AudioStream" uid="uid://04ixjsfjw7c5" path="res://assets/audio/stretch2.ogg" id="3_5swx0"]
[ext_resource type="AudioStream" uid="uid://cctw3aqtvn2ev" path="res://assets/audio/catapult.ogg" id="4_fsxl2"]
[ext_resource type="AudioStream" uid="uid://1ggolhur0tuw" path="res://assets/audio/kick_wood.ogg" id="5_dl82p"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_x85cc"]
bounce = 0.2

[sub_resource type="CircleShape2D" id="CircleShape2D_x85cc"]
radius = 19.0263

[node name="Animal" type="RigidBody2D"]
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_x85cc")
freeze = true
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_x85cc")

[node name="parrot" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_oryip")

[node name="Debug" type="Label" parent="."]
visible = false
offset_left = -23.0
offset_top = -88.0
offset_right = 272.0
offset_bottom = 46.0
scale = Vector2(0.159999, 0.159999)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 98
text = "debug"
metadata/_edit_use_anchors_ = true

[node name="arrow" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_x85cc")
offset = Vector2(150, 0)

[node name="StrecthSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_5swx0")

[node name="LaunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_fsxl2")

[node name="KickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_dl82p")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x85cc")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="sleeping_state_changed" from="." to="." method="_on_sleeping_state_changed"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
